MAVENOPTS remove from mvnTest